--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Island Breeze</title>
+  <title>About - Island Breeze</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,24 +12,17 @@
       <h1>Island Breeze</h1>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Welcome to Island Breeze</h2>
-      <p>Your peaceful escape by the sea</p>
-      <a href="contact.html" class="button">Book Now</a>
-    </div>
-  </section>
-
-  <section class="intro">
-    <h2>Relax. Explore. Enjoy.</h2>
-    <p>Discover the beauty of the Aegean Sea at our luxurious resort, where hospitality meets nature.</p>
+  <section class="about-page">
+    <h2>About Us</h2>
+    <p>Island Breeze is a family-run resort that blends comfort, tradition, and the breathtaking Aegean surroundings. Our mission is to make you feel at home — whether you’re here to unwind or explore.</p>
+    <img src="about.jpg" alt="About us">
   </section>
 
   <footer>
