--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Island Breeze</title>
+  <title>Contact - Island Breeze</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,22 +14,19 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Welcome to Island Breeze</h2>
-      <p>Your peaceful escape by the sea</p>
-      <a href="contact.html" class="button">Book Now</a>
-    </div>
-  </section>
-
-  <section class="intro">
-    <h2>Relax. Explore. Enjoy.</h2>
-    <p>Discover the beauty of the Aegean Sea at our luxurious resort, where hospitality meets nature.</p>
+  <section class="contact-page">
+    <h2>Contact Us</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="button">Send Message</button>
+    </form>
   </section>
 
   <footer>
