--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Island Breeze</title>
+  <title>Gallery - Island Breeze</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,23 +13,20 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="gallery.html" class="active">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Welcome to Island Breeze</h2>
-      <p>Your peaceful escape by the sea</p>
-      <a href="contact.html" class="button">Book Now</a>
+  <section class="gallery-page">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="gallery1.jpg" alt="View 1">
+      <img src="gallery2.jpg" alt="View 2">
+      <img src="gallery3.jpg" alt="View 3">
+      <img src="gallery4.jpg" alt="View 4">
     </div>
-  </section>
-
-  <section class="intro">
-    <h2>Relax. Explore. Enjoy.</h2>
-    <p>Discover the beauty of the Aegean Sea at our luxurious resort, where hospitality meets nature.</p>
   </section>
 
   <footer>
