--- a/availability.html
+++ b/availability.html
@@ -48,29 +48,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="availability.html">Availability</a></li>
+        <li><a href="availability.html"class="active">Availability</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-
-  <section class="contact-info" role="main">
-    <h2>Reservations & Contact</h2>
-    <p>
-      For reservations, please contact <strong>Katerina</strong> via email or phone:
-    </p>
-    <p>
-      📧 <a href="mailto:palaiologou.katerina@yahoo.gr">palaiologou.katerina@yahoo.gr</a><br />
-      📞 <a href="tel:+306945124103">+30 694 512 4103</a>
-    </p>
-    <p>
-      You can also reserve your stay through our <a href="https://airbnb.com/h/efcharis" target="_blank" rel="noopener noreferrer">Airbnb listing</a>.
-    </p>
-  </section>
-
-  <footer>
-    <p>© 2025 Efcharis House Skopelos. All rights reserved.</p>
-  </footer>
-</body>
-</html>
