--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gallery - Island Breeze</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gallery - Efcharis House Skopelos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
+    <h1>Efcharis House Skopelos</h1>
     <nav>
-      <h1>Island Breeze</h1>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="availability.html">Availability</a></li>
         <li><a href="gallery.html" class="active">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -22,15 +23,15 @@
   <section class="gallery-page">
     <h2>Gallery</h2>
     <div class="gallery-grid">
-      <img src="gallery1.jpg" alt="View 1">
-      <img src="gallery2.jpg" alt="View 2">
-      <img src="gallery3.jpg" alt="View 3">
-      <img src="gallery4.jpg" alt="View 4">
+      <img src="gallery1.jpg" alt="View 1" />
+      <img src="gallery2.jpg" alt="View 2" />
+      <img src="gallery3.jpg" alt="View 3" />
+      <img src="gallery4.jpg" alt="View 4" />
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Island Breeze. All rights reserved.</p>
+    <p>© 2025 Efcharis House Skopelos. All rights reserved.</p>
   </footer>
 </body>
 </html>
